--- a/symfony-project/templates/company/dev-info.html.twig
+++ b/symfony-project/templates/company/dev-info.html.twig
@@ -77,7 +77,14 @@
 		<div class="site-section bg-light h-100" style="display:flex; justify-content:center; align-items:center">
 			<div class="container team" style="display:flex; justify-content:center; align-items:center">
 				<div class="col-md-6 col-lg-6 pic">
-					<img src="images/person_1-min.jpg" alt="Image" class="w-95 img-fluid">
+					{% if app.session.get('user_id') is not empty %}
+
+						{% if developer %}
+							<img src="{{ asset('uploads/photos/' ~ developer.avatar) }}" alt="Image" class="w-75">
+						{% endif %}
+					{% else %}
+						<img style="width:2rem; height:2rem; border-radius:4rem;" src="https://cdn1.iconfinder.com/data/icons/ui-essential-17/32/UI_Essential_Outline_1_essential-app-ui-avatar-profile-user-account-1024.png"/>
+					{% endif %}
 				</div>
 
 				<div class="col-md-6 col-lg-6 d-flex flex-column my-8 justify-center align-center">
@@ -91,19 +98,20 @@
 						<strong>Localisation:</strong>
 						{{ developer.localisation }}
 					</p>
-					<p>
-						<strong>Langages de programmation:</strong>
-						<span class="badge badge-primary">{{ developer.languages }}</span>
-					</p>
+					<div class="mb-4">
+						{% for language in developer.languages %}
+							<span class="badge fs-3 bg-secondary text-white p-3 me-2 mb-2">{{ language }}</span>
+						{% endfor %}
+					</div>
 					<p>
 						<strong>Niveau d'expérience:</strong>
 						{{ developer.experience }}
 						ans
 					</p>
 					{# <p>
-																<strong>Salaire minimum souhaité:</strong>
-																{{ developer.salaire_min }} €
-															</p> #}
+																															<strong>Salaire minimum souhaité:</strong>
+																															{{ developer.salaire_min }} €
+																														</p> #}
 					<p>
 						<strong>Biographie:</strong>
 						{{ developer.bio }}
@@ -247,4 +255,4 @@
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
 
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
