--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -56,9 +56,6 @@
 							<li>
 								<a href="{{path('app_favori')}}">Favoris</a>
 							</li>
-
-							{# sdljsf #}
-
 							<li class="has-children">
 								<a href="#">Mon compte</a>
 								<ul class="dropdown">
@@ -68,258 +65,234 @@
 									<li>
 										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
 									</li>
-										<li>
+									<li>
 										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_profile')}}">Profil</a>
 									</li>
+									<li>
+										<a class="text-black" style="cursor:pointer;" href="{{ path('app_home') }}">Déconnexion</a>
+									</li>
+
 								</ul>
+
+							</li>
+							<li>
+								{% if app.session.get('user_id') is not empty %}
+
+									{% if developer %}
+										<img style="width:2rem; height:2rem; border-radius:4rem;" src="{{ asset('uploads/photos/' ~ developer.avatar) }}">
+									{% endif %}
+								{% else %}
+									<img style="width:2rem; height:2rem; border-radius:4rem;" src="https://cdn1.iconfinder.com/data/icons/ui-essential-17/32/UI_Essential_Outline_1_essential-app-ui-avatar-profile-user-account-1024.png"/>
+								{% endif %}
+							</li>
+						</li>
+					</ul>
+
+				</div>
+
+			</div>
+		</nav>
+		<!-- END nav -->
+	</body>
+</html></body></html></div><!-- END container --><div class="hero-slant overlay" data-stellar-background-ratio="0.5" style="background-image: url('https://images.unsplash.com/photo-1653669486781-7265d7824b44?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"><div class="container"><div class="row align-items-center justify-content-between">
+<div class="col-lg-7 intro">
+	{% if developer %}
+		<h2 class="text-primary font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+			Bienvenue
+			{{ developer.nom }}
+		</h2>
+	{% else %}
+		<h3 class="text-primary font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+			Bienvenue sur AdopteUnDev
+		</h3>
+	{% endif %}
+
+	<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
+		Transformez vos compétences en opportunités exceptionnelles.</h1>
+	<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous donnons vie à des projets uniques en connectant des développeurs passionnés à des entreprises visionnaires, créant ainsi un écosystème dynamique d'innovation et de collaboration.</p>
+	{# {% if app.session.get('user_id') is not empty %}
+																																																																																								<p class="text-white" data-aos="fade-up" data-aos-delay="200">Bienvenue, utilisateur ID :
+																																																																																									{{ app.session.get('user_id') }}</p>
+																																																																																							{% endif %} #}
+
+
+</div></div></div><div class="slant" style="background-image: url('images/slant.svg');"></div></div><div class="py-3"><div class="container"><div class="owl-logos owl-carousel">
+<div class="item">
+	<img src="images/logo-puma.png" alt="Image" class="img-fluid">
+</div>
+<div class="item">
+	<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
+</div>
+<div class="item">
+	<img src="images/logo-google.png" alt="Image" class="img-fluid">
+</div>
+<div class="item">
+	<img src="images/logo-paypal.png" alt="Image" class="img-fluid">
+</div>
+<div class="item">
+	<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
+</div>
+<div class="item">
+	<img src="images/logo-google.png" alt="Image" class="img-fluid">
+</div></div></div></div><div class="site-section bg-light" id="blog-section"><div class="container"><div class="row">
+<h2 class="font-weight-bold text-center">Les postes récents</h2></div><div class="container">
+<div class="row">
+	{% for fiche in fiches_de_poste %}
+		<div class="col-md-6 col-lg-4 mb-4">
+			<div class="card shadow-sm p-3">
+				<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+				<div class="card-body">
+					<h3>
+						{# {{ fiche.entrepriseId }}</h3> #}
+
+						<h5 class="card-title">{{ fiche.titre }}</h5>
+						<p class="card-text">
+							{{ fiche.description }}
+							<br>
+							{{ fiche.localisation }}
+						</p>
+					</div>
+					<div class="ontainer">
+						<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
+						<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	{% else %}
+		<li class="list-group-item text-center">
+			Aucun poste disponible
+		</li>
+	{% endfor %}
+</div>
+<div class="row mt-5">
+	<div class="col-lg-4 mx-auto">
+		<a href="{{path('app_offre')}}" class="btn btn-primary btn-block">Voir plus</a>
+	</div>
+</div></div></div><div class="site-section bg-light" id="blog-section"><div class="container">
+<div class="row">
+	<h2 class="font-weight-bold text-center">Les postes les plus consultés</h2>
+</div>
+<div class="container">
+	<div class="row">
+		{% for fiche in offres %}
+			<div class="col-md-6 col-lg-4 mb-4">
+				<div class="card shadow-sm p-3">
+					<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+					<div class="card-body">
+						<h3>
+							{# {{ fiche.entreprise.nom }}</h3> #}
+
+							<h5 class="card-title">{{ fiche.titre }}</h5>
+							<p class="card-text">
+								{{ fiche.description }}
+								<br>
+								{{ fiche.localisation }}
+							</p>
+						</div>
+						<div class="ontainer">
+							<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
+							<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+						</div>
+					</div>
+				</div>
+			{% else %}
+				<li class="list-group-item text-center">
+					Aucun poste disponible
+				</li>
+			{% endfor %}
+		</div>
+	</div>
+
+	<div class="row mt-5">
+		<div class="col-lg-4 mx-auto">
+			<a href="{{ path('app_offre') }}" class="btn btn-primary btn-block">Voir plus</a>
+		</div>
+	</div>
+</div></div><div class="site-footer text-white">
+<div class="container">
+	<div class="row justify-content-between">
+		<div class="col-lg-4">
+			<div class="widget">
+				<h3>À propos</h3>
+				<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+			</div>
+			<div class="widget">
+				<h3>Connectez-vous avec nous</h3>
+				<ul class="social list-unstyled">
+					<li>
+						<a href="{{path('app_offre')}}">
+							<span class="icon-facebook"></span>
+						</a>
+					</li>
+					<li>
+						<a href="{{path('app_offre')}}">
+							<span class="icon-twitter"></span>
+						</a>
+					</li>
+					<li>
+						<a href="{{path('app_offre')}}">
+							<span class="icon-instagram"></span>
+						</a>
+					</li>
+					<li>
+						<a href="{{path('app_offre')}}">
+							<span class="icon-linkedin"></span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-lg-6">
+			<div class="row">
+				<div class="col-12">
+					<div class="widget">
+						<h3>Navigation</h3>
+					</div>
+				</div>
+				<div class="col-6 col-sm-6 col-md-4">
+					<div class="widget">
+						<ul class="links list-unstyled">
+							<li>
+								<a href="{{path('app_offre')}}">Accueil</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Offres</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Matching</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Favoris</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Contact</a>
 							</li>
 						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-			<!-- END nav -->
-
-		</div>
-		<!-- END container -->
-
-
-		<div class="hero-slant overlay" data-stellar-background-ratio="0.5" style="background-image: url('https://images.unsplash.com/photo-1653669486781-7265d7824b44?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')">
-
-			<div class="container">
-				<div class="row align-items-center justify-content-between">
-					<div class="col-lg-7 intro">
-						{% if developer %}
-							<h2 class="text-primary font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
-								Bienvenue
-								{{ developer.nom }} </h2>
-						{% else %}
-							<h3 class="text-primary font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
-								Bienvenue sur AdopteUnDev
-							</h3>
-						{% endif %}
-
-						<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
-							Transformez vos compétences en opportunités exceptionnelles.</h1>
-						<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous donnons vie à des projets uniques en connectant des développeurs passionnés à des entreprises visionnaires, créant ainsi un écosystème dynamique d'innovation et de collaboration.</p>
-						{# {% if app.session.get('user_id') is not empty %}
-																																																	<p class="text-white" data-aos="fade-up" data-aos-delay="200">Bienvenue, utilisateur ID :
-																																																		{{ app.session.get('user_id') }}</p>
-																																																{% endif %} #}
-
-
 					</div>
 				</div>
-			</div>
-
-			<div class="slant" style="background-image: url('images/slant.svg');"></div>
-		</div>
-
-
-		<div class="py-3">
-			<div class="container">
-
-				<div class="owl-logos owl-carousel d-flex justify-center align-center">
-
-					<div class="item">
-						<img src="https://telecomnancy.univ-lorraine.fr/wp-content/uploads/2022/10/LOGO-ssg-1024x137.png" alt="Image" class="img-fluid">
-					</div>
-					<div class="item">
-						<img src="https://bim-w.com/wp-content/uploads/3DS_Corp_Logotype_Blue_RGB.png" alt="Image" class="img-fluid">
-					</div>
-					<div class="item">
-						<img src="https://rennesbusinessmag.fr/wp-content/uploads/2021/03/Logo_6TM21.png" alt="Image" class="img-fluid">
-					</div>
-					<div class="item">
-						<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" alt="Image" class="img-fluid">
-					</div>
-					<div class="item">
-						<img src="https://cdn.cookielaw.org/logos/9c9e1da5-cb5e-4789-be00-8f37c0e84ef3/2ffce58c-95ef-42c4-9c00-42881e5a0889/7c02a52b-9889-4293-99bd-553ef548c490/Randstad_Digital_Logo.png" alt="Image" class="img-fluid">
-					</div>
-
-
-				</div>
-
-
-			</div>
-
-		</div>
-
-
-		<div class="site-section bg-light" id="blog-section">
-			<div class="container">
-				<div class="row">
-					<h2 class="font-weight-bold text-center">Les postes récents</h2>
-				</div>
-				<div class="container">
-					<div class="row">
-						{% for fiche in fiches_de_poste %}
-							<div class="col-md-6 col-lg-4 mb-4">
-								<div class="card shadow-sm p-3">
-									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-									<div class="card-body">
-										<h3>
-											{# {{ fiche.entreprise.nom }}</h3> #}
-
-										<h5 class="card-title">{{ fiche.titre }}</h5>
-										<p class="card-text">
-											{{ fiche.description }}
-											<br>
-											{{ fiche.localisation }}
-										</p>
-									</div>
-									<div class="ontainer">
-										<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
-										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-									</div>
-								</div>
-							</div>
-						{% endfor %}
-					</div>
-				</div>
-
-				<div class="row mt-5">
-					<div class="col-lg-4 mx-auto">
-						<a href="{{path('app_offre')}}" class="btn btn-primary btn-block">Voir plus</a>
+				<div class="col-6 col-sm-6 col-md-4">
+					<div class="widget">
+						<ul class="links list-unstyled">
+							<li>
+								<a href="{{path('app_offre')}}">À propos de nous</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Politique de confidentialité</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">FAQ</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Carrières</a>
+							</li>
+							<li>
+								<a href="{{path('app_offre')}}">Support</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<div class="site-section bg-light" id="blog-section">
-			<div class="container">
-				<div class="row">
-					<h2 class="font-weight-bold text-center">Les postes les plus consultés</h2>
-				</div>
-				<div class="container">
-					<div class="row">
-						{% for fiche in offres %}
-							<div class="col-md-6 col-lg-4 mb-4">
-								<div class="card shadow-sm p-3">
-									<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
-									<div class="card-body">
-										<h3>
-											{# {{ fiche.entreprise.nom }}</h3> #}
-
-										<h5 class="card-title">{{ fiche.titre }}</h5>
-										<p class="card-text">
-											{{ fiche.description }}
-											<br>
-											{{ fiche.localisation }}
-										</p>
-									</div>
-									<div class="ontainer">
-										<a href="{{ path('developer_add_fiche_favoris', { ficheId: fiche.id }) }}" class="btn btn-success">Ajouter favoris</a>
-										<a href="{{ path('app_detail', {'id': fiche.id}) }}" class="btn btn-primary btn-sm">Voir l'offre</a>
-									</div>
-								</div>
-							</div>
-						{% endfor %}
-					</div>
-				</div>
-
-				<div class="row mt-5">
-					<div class="col-lg-4 mx-auto">
-						<a href="{{ path('app_offre') }}" class="btn btn-primary btn-block">Voir plus</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
-						</div>
-						<div class="widget">
-							<h3>Connectez-vous avec nous</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-12">
-								<div class="widget">
-									<h3>Navigation</h3>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">Accueil</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Offres</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Favoris</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">À propos de nous</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">FAQ</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Carrières</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Support</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-	</body>
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+	</div>
+</div></div></body></html></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
