--- a/symfony-project/templates/fiche_de_poste/index.html.twig
+++ b/symfony-project/templates/fiche_de_poste/index.html.twig
@@ -117,6 +117,7 @@
 								<div class="card shadow-sm">
 									<div class="card-body">
 										<h5 class="card-title text-primary">{{ fiche.titre }}</h5>
+										{# <h5 class="card-title text-primary">{{ fiche.entreprise.id }}</h5> #}
 										<h6 class="card-subtitle mb-2 text-muted">{{ fiche.localisation }}</h6>
 										<p class="card-text">
 											<strong>Technologies :</strong>
