--- a/symfony-project/templates/profil/index.html.twig
+++ b/symfony-project/templates/profil/index.html.twig
@@ -135,16 +135,16 @@
 					</div>
 
 					{# <div class="form-group mb-3">
-											<label for="languages" class="form-label">Langages ou technologies</label>
-											<select id="languages" name="languages[]" class="form-control" multiple>
-												<option value="python">Python</option>
-												<option value="javascript">JavaScript</option>
-												<option value="java">Java</option>
-												<option value="php">PHP</option>
-												<option value="csharp">C#</option>
-											</select>
-											<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
-										</div> #}
+																<label for="languages" class="form-label">Langages ou technologies</label>
+																<select id="languages" name="languages[]" class="form-control" multiple>
+																	<option value="python">Python</option>
+																	<option value="javascript">JavaScript</option>
+																	<option value="java">Java</option>
+																	<option value="php">PHP</option>
+																	<option value="csharp">C#</option>
+																</select>
+																<small class="form-text text-muted">Maintenez Ctrl ou Cmd pour sélectionner plusieurs options</small>
+															</div> #}
 
 					<!-- Bouton de recherche -->
 					<div class="text-center">
@@ -161,7 +161,13 @@
 							<div class="col-md-6 col-lg-4 mb-4">
 								<div class="card shadow-sm position-relative">
 									<div class="position-relative top-0 end-0 p-3">
-										<img src="https://img.freepik.com/free-photo/portrait-serious-man_23-2148780115.jpg" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;" alt="{{ developer.nom }} Avatar">
+										{% if app.session.get('user_id') is not empty %}
+											{% if developer %}
+												<img src="{{ asset('uploads/photos/' ~ developer.avatar) }}" alt="Image" class="rounded-circle border" style="width: 60px; height: 60px; object-fit: cover;">
+											{% endif %}
+										{% else %}
+											<img src="{{'https://via.placeholder.com/150'}}" alt="Profil Avatar">
+										{% endif %}
 									</div>
 									<div class="card-body">
 										<h5 class="card-title">{{ developer.nom }}</h5>
@@ -182,7 +188,7 @@
 							</div>
 						{% endfor %}
 					{% else %}
-						<p class="text-center">Aucun développeur trouvé pour ces critères.</p>
+						<li class="list-group-item text-center">Aucun développeur trouvé pour ces critères.</li>
 					{% endif %}
 				</div>
 			</div>
@@ -283,4 +289,4 @@
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+</div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
